--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -g
 all: main.o
-	g++ main.o Catalogue.o Interface.o ListeParcours.o Trajet.o TrajetSimple.o TrajetCompose.o Parcours.o -o main
+	g++ main.o Catalogue.o Interface.o ListeParcours.o Trajet.o TrajetSimple.o TrajetCompose.o Parcours.o -o trajets
 
 main.o: Interface.o 
 
@@ -14,7 +14,7 @@ ListeParcours.o: Parcours.o
 Parcours.o: Trajet.o TrajetSimple.o TrajetCompose.o
 
 clean:
-	rm main.o Catalogue.o Interface.o ListeParcours.o Trajet.o TrajetSimple.o TrajetCompose.o main.o Parcours.o
+	rm main.o Catalogue.o Interface.o ListeParcours.o Trajet.o TrajetSimple.o TrajetCompose.o main.o Parcours.o trajets
 
 run: all
 	./main
